# hifive1-revb-template

./: .gitignore  Cargo.toml  README.md  SeggerStudio.emProject  cargo-generate.toml  main.rs
.cargo/: config
