[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
publish = false
edition = "2018"

[[bin]]
name = "{{project-name}}"
path = "main.rs"
test = false
bench = false

[profile.release]
opt-level = "z"
codegen-units = 1
debug = true
lto = true

[dependencies.embedded-hal]
version = "0.2.7"

[dependencies.hifive1]
version = "0.10.0"
features = [
    "board-hifive1-revb"
]

[dependencies.riscv]
version = "0.7.0"

[dependencies.riscv-rt]
version = "0.8.1"
